--- a/resources/scss/fonts.scss
+++ b/resources/scss/fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Harmony';
-  src: url('/fonts/Harmony.woff2') format('woff2');
+  src: url('/public/fonts/Harmony.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: 'Raleway';
-  src: url('/fonts/Raleway-Regular.woff2') format('woff2');
+  src: url('/public/fonts/Raleway-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -16,7 +16,7 @@
 
 @font-face {
   font-family: 'Raleway';
-  src: url('/fonts/Raleway-Semibold.woff2') format('woff2');
+  src: url('/public/fonts/Raleway-Semibold.woff2') format('woff2');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
