Add header logo inside h1 heading

--- a/resources/views/layout/header.antlers.html
+++ b/resources/views/layout/header.antlers.html
@@ -16,9 +16,12 @@ links:
   x-data="{ isNavOpen: false }"
   class="container w-full py-2 flex items-center justify-between lg:py-4"
 >
-  <a href="/">
-    {{ svg src="assets/logo" class="w-32 lg:w-52" }}
-  </a>
+  <h1>
+    <span class="sr-only">UK Spa and Wellness Association</span>
+    <a href="/">
+      {{ svg src="assets/logo" class="w-32 lg:w-52" }}
+    </a>
+  </h1>
 
   <nav
     x-cloak
