Create slider with images

--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -12,7 +12,7 @@
 
         {{ partial:layout/header }}
 
-        <main></main>
+        {{ template_content }}
 
         {{# {{  partial:layout/footer  }} #}}
     </body>
