--- a/resources/views/layout/header.antlers.html
+++ b/resources/views/layout/header.antlers.html
@@ -26,7 +26,7 @@ links:
   <nav
     x-cloak
     x-bind:class="isNavOpen ? 'translate-x-0' : 'translate-x-full'"
-    class="fixed top-0 right-0 w-screen h-dvh flex flex-col bg-beige-100 justify-center transition duration-300 ease-out xl:hidden"
+    class="fixed z-50 top-0 right-0 w-screen h-dvh flex flex-col bg-beige-100 justify-center transition duration-300 ease-out xl:hidden"
   >
     <button
       type="button"
