--- a/resources/views/partials/_section.antlers.html
+++ b/resources/views/partials/_section.antlers.html
@@ -1,14 +1,20 @@
 <section class="w-full">
     
     <div class="{{ container !== 'full' ?= 'container' }} {{ classes }}">
-        <div class="{{ container === 'full' ?= 'text-center px-2' }}">
-            <h2 class="font-secondary text-black leading-tight {{ title_size === 'big' ? 'text-5xl lg:text-6xl 2xl:text-7.5xl mb-8' : 'text-3xl lg:text-5.5xl mb-2.5' }}">
-                {{ title }}
-            </h2>
-            <p class="font-primary text-brown text-base leading-normal max-w-[52.25rem] mx-auto lg:text-xl lg:leading-normal">
-                {{ subtitle }}
-            </p>
-        </div>
+        {{ if heading || subheading }}
+            <div class="{{ container === 'full' ?= 'text-center px-2' }}">
+                {{ if heading }}
+                    <h2 class="max-w-xl mx-auto font-secondary text-black leading-tight lg:max-w-[54.75rem] {{ heading_size === 'big' ? 'text-5xl lg:text-6xl 2xl:text-7.5xl mb-8' : 'text-3xl lg:text-5.5xl mb-2.5' }}">
+                        {{ heading }}
+                    </h2>
+                {{ /if }}
+                {{ if subheading }}
+                    <p class="font-primary text-brown text-base leading-normal max-w-[52.25rem] mx-auto lg:text-xl lg:leading-normal">
+                        {{ subheading }}
+                    </p>
+                {{ /if }}
+            </div>
+        {{ /if }}
 
         {{ slot }}
     </div>
