--- a/resources/scss/utilities.scss
+++ b/resources/scss/utilities.scss
@@ -9,3 +9,15 @@
 .absolute-x-centered {
     @apply absolute left-1/2 -translate-x-1/2;
 }
+
+.heading {
+    &-sm {
+        @apply text-3xl leading-tight font-secondary lg:text-5.5xl mb-2.5;
+    }
+    &-md {
+        @apply text-3xl font-secondary text-center leading-[1.4] lg:text-5xl lg:leading-[1.4];
+    }
+    &-lg {
+        @apply text-5xl leading-tight font-secondary lg:text-6xl 2xl:text-7.5xl mb-8;
+    }
+}
