--- a/resources/views/layout/header.antlers.html
+++ b/resources/views/layout/header.antlers.html
@@ -49,8 +49,8 @@ links:
     </ul>
 
     <div class="absolute-x-centered bottom-0 w-full flex justify-center space-x-2.5 p-4 lg:hidden">
-      <button type="button" class="font-primary font-semibold text-sm py-2 px-6 bg-beige-200 text-black">Sign in</button>
-      <button type="button" class="font-primary font-semibold text-sm py-2 px-6 bg-black text-beige-200">Join us</button>
+      <a href="#signin" class="font-primary font-semibold text-sm py-2 px-6 bg-beige-100 text-black">Sign in</a>
+      <a href="#joinus" class="font-primary font-semibold text-sm py-2 px-6 bg-black text-beige-50">Join us</a>
     </div>
   </nav>
 
@@ -79,8 +79,8 @@ links:
     </nav>
   
     <div class="hidden space-x-2.5 lg:flex">
-      <button type="button" class="font-primary font-semibold text-sm py-2 px-6 bg-beige-200 text-black">Sign in</button>
-      <button type="button" class="font-primary font-semibold text-sm py-2 px-6 bg-black text-beige-200">Join us</button>
+      <a href="#signin" class="font-primary font-semibold text-sm py-2 px-6 bg-beige-100 text-black">Sign in</a>
+      <a href="#joinus" class="font-primary font-semibold text-sm py-2 px-6 bg-black text-beige-200">Join us</a>
     </div>
   </div>
 </header>
