--- a/resources/views/partials/_heading.antlers.html
+++ b/resources/views/partials/_heading.antlers.html
@@ -1,4 +1,4 @@
-<div class="{{ center === true ?= 'flex justify-center text-center px-2' }} {{ classes }}">
+<div class="{{ center === true ?= 'flex flex-col items-center text-center px-2' }} {{ classes }}">
     {{ if title }}
         <h2 class="font-secondary text-black max-w-xl lg:max-w-[54.75rem] heading-{{ title_size ?? 'sm' }}">
             {{ title }}
