Create dark and light mode for logo

--- a/resources/scss/site.scss
+++ b/resources/scss/site.scss
@@ -2,10 +2,8 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-
 @import "fonts";
 @import "utilities";
 
-
+@import './modules/logo';
 @import './modules/team';
-/* This is all you. */
