--- a/resources/views/layout/header.antlers.html
+++ b/resources/views/layout/header.antlers.html
@@ -19,7 +19,7 @@ links:
   <h1>
     <span class="sr-only">UK Spa and Wellness Association</span>
     <a href="/">
-      {{ svg src="assets/logo" class="w-32 lg:w-52" }}
+      {{ svg src="assets/logo" class="logo-dark w-32 lg:w-52" }}
     </a>
   </h1>
 
