--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -14,6 +14,6 @@
 
         {{ template_content }}
 
-        {{# {{  partial:layout/footer  }} #}}
+        {{  partial:layout/footer  }}
     </body>
 </html>
